k8s/nexuscare-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nexuscare
---
apiVersion: v1
kind: Namespace
metadata:
  name: nexuscare-monitoring
